--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/jerozeek/mediacloud-server.git"
   },
-  "keywords": ["media", "upload", "mediacloud"],
+  "keywords": [
+    "media",
+    "upload",
+    "mediacloud"
+  ],
   "author": "Ezumah Jeremiah",
   "license": "MIT",
   "dependencies": {
@@ -20,7 +25,11 @@
     "form-data": "^4.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
     "typescript": "^5.5.3"
   }
 }
