--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediacloud-server-client",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A TypeScript package for uploading files to Media Cloud API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,6 +9,9 @@
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
+  "contributors": [
+    "Ezumah Jeremiah Kalu <jerozeek2@gmail.com> (https://mediacloud.ng)"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/jerozeek/mediacloud-server.git"
